--- a/angular.json
+++ b/angular.json
@@ -1,10 +1,10 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "defaultProject": "app",
+  "defaultProject": "rnds",
   "newProjectRoot": "projects",
   "projects": {
-    "app": {
+    "rnds": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
