--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,13 @@
 {
-  "name": "3Rounds",
-  "integrations": {
-    "capacitor": {}
-  },
-  "type": "angular",
-  "id": "830e791a"
+  "defaultProject": "rnds",
+  "projects": {
+    "rnds": {
+      "name": "3Rounds",
+      "integrations": {
+        "capacitor": {}
+      },
+      "type": "angular",
+      "id": "830e791a"
+    }
+  }
 }
