--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,11 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/theme/custom.scss",
+              "src/global.scss"
+            ],
             "scripts": []
           },
           "configurations": {
