--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/unique-device-id": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
     "firebase": "^8.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
