--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/service-worker": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/clipboard": "^5.33.0",
+    "@ionic-native/core": "^5.33.0",
     "@ionic-native/unique-device-id": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-clipboard": "^1.3.0",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "firebase": "^8.4.1",
     "rxjs": "~6.6.0",
