--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@ionic-native/core": "^5.33.0",
     "@ionic-native/unique-device-id": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "canvas-confetti": "^1.4.0",
     "cordova-clipboard": "^1.3.0",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "firebase": "^8.4.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
